--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7aba2fa
-	base = 29495d0
+	base = 03ba129
 	trim = rmw_cyclonedds_cpp
-	trimbase = 
+	trimbase = 29495d0
