--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7aba2fa
-	base = 4386dde
+	base = 0c4ab34
 	trim = cyclonedds_cmake_module
-	trimbase = 
+	trimbase = 4386dde
